examples/errors/renewcommand-correct.tex
\documentclass{article}
\begin{document}
\renewcommand\textbf[1]{\textsl{#1}}
Wir definieren \textbf{fett} um.
\end{document}
